# ChangeLog for dev-python/qscintilla-python
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/qscintilla-python/ChangeLog,v 1.3 2007/12/04 10:17:58 hawking Exp $

  04 Dec 2007; Ali Polatel <hawking@gentoo.org>
  +files/qscintilla-python-2.1-nostrip.patch, qscintilla-python-2.1.ebuild:
  Added patch to disable stripping, #199925

  21 Nov 2007; Ali Polatel <hawking@gentoo.org>
  qscintilla-python-2.1.ebuild:
  fixed dependency issue with qscintilla.

*qscintilla-python-2.1 (20 Nov 2007)

  20 Nov 2007; Ali Polatel <hawking@gentoo.org> +metadata.xml,
  +qscintilla-python-2.1.ebuild:
  split dev-python/qscintilla to x11-libs/qscintilla and
  dev-python/qscintilla-python, to break circular dependency bug 199543.
