@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX qscintilla-python-2.1-nostrip.patch 962 RMD160 db17ca19061e462619ca33cbf89d6a2ee0a3f467 SHA1 841ef6164d455ec495b8e3f0ff6e22c207abea0a SHA256 6de21be58dc2712eac7a9d353e0836975d9b59f568a0fbba104e86d3e4577945
 DIST QScintilla-1.73-gpl-2.1.tar.gz 1866929 RMD160 ef114b468b3cea5d36346c915bc407ce2ad3ec65 SHA1 ca9ac61cc3d537d7b53202ff5d8565365c3f8734 SHA256 545fcefb75fe159b48e2a17485c12ba8ca548f387f594923664258b10831bf86
-EBUILD qscintilla-python-2.1.ebuild 1667 RMD160 0a26821b64bb4919a49ea7199b41a4a503da7e93 SHA1 194c149092c48e41d12ffdbf1387346016805c59 SHA256 f8a10461d33f51980f51780b1196559e2cd3d3bd59f821482f09c7885c697981
-MISC ChangeLog 787 RMD160 24d91e768149da3f948b3de5a1f1a7bd3c38c088 SHA1 e6804d9af7e9c9da5713cd05e9cb2965233658d8 SHA256 6ac7ade0b8bfb843ab8bc81824d74fbe96cdf910cda2e0fa3429d4f2be1e435e
+EBUILD qscintilla-python-2.1.ebuild 1664 RMD160 065762ed29436049423ecbe4587abc4f8d8b476e SHA1 4328f1528282ef893362b34bb21e454535d0e357 SHA256 61fc3b718e4a052d0c40544d7334b3c0712276b0545d8fc55d5f8413cdf153d5
+MISC ChangeLog 883 RMD160 8ac0040a4a379cb6ad0fe275dde3e94b977502ae SHA1 e4c8c69c1f17e35780d169045d52596184d1503a SHA256 4764ce4634e7e00013be3b200563015c68bb64be623a239cb0d735b3163c98fe
 MISC metadata.xml 175 RMD160 74ecde8b999da503a2733b49ed618d5d50d26476 SHA1 ec86e15b85c2bc4429ad67bb52238b44f2b16cbd SHA256 26b18db06b1665422af8905fb70f8f48920a048578172d62b9689e273ee39a2d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHrYuFz974XjDVpbkRAkqoAJ9NuRA2fFoU1zR+llJdzD6OHTGiMACgmEk8
+Hi9pnMATJlD3P/t7iUjik1w=
+=mgXC
+-----END PGP SIGNATURE-----
