@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/qscintilla-python
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/qscintilla-python/ChangeLog,v 1.3 2007/12/04 10:17:58 hawking Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/qscintilla-python/ChangeLog,v 1.4 2008/02/09 11:16:15 jokey Exp $
+
+  09 Feb 2008; Markus Ullmann <jokey@gentoo.org>
+  qscintilla-python-2.1.ebuild:
+  Stable on x86
 
   04 Dec 2007; Ali Polatel <hawking@gentoo.org>
   +files/qscintilla-python-2.1-nostrip.patch, qscintilla-python-2.1.ebuild:
